Enhanced text field and added hint colors. Added a `hint_name` string resource to `strings.xml` for use as a hint in the text field. Added `hint_text` color to `colors.xml` to style the text field's hint. Applied the new `hint_name` string and `hint_text` color as hint and color respectively to the text field in `activity_cause.xml` Updated the gradle to the last version Added the file AndroidProjectSystem.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SaludApp</string>
     <string name="put_your_name">Escribe tu nombre</string>
     <string name="press_button">Pulsame</string>
+    <string name="hint_name">Tu nombre</string>
 </resources>
